css/main.css
/* ... */
.map iframe {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

.contact-section {
  background-color: #2a423a;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.contact-content p {
  margin: 0;
}

/*--- Mobile Styles - FAQ Page---*/

.faq {
  background-color: #527158;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.faq .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 50px 0 0 0;
}

.faq h2 {
  margin-bottom: 40px;
}

.faq-content {
  margin-bottom: 50px;
}

/*--- Footer Styles---*/

footer {
  background-color: #202322;
  flex-direction: column;
}

footer p {
  margin: 0;
  text-align: center;
}

footer h4 {
  text-align: center;
}

footer .content-wrapper {
  margin: 50px 0;
  width: 55%;
}

footer .contact {
  margin-bottom: 50px;
}

footer .social-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 50px;
}

footer .social-icons i {
  border-radius: 100%;
  background-color: #527158;
  font-size: 2em;
  height: ;
  padding: 15px;
  width: ;
}

footer .copyright {
  margin: 20px 0;
}

/*---- Homepage Form ----*/

aside .form {
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
}

input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}

/*
* Hide only visually, but have it available for screen readers:
* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
*
* 1. For long content, line feeds are not interpreted as spaces and small width
*    causes content to wrap 1 word per line:
*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
*/

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
* Extends the .sr-only class to allow the element
* to be focusable when navigated to via the keyboard:
* https://www.drupal.org/node/897638
*/

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
* Hide visually and from screen readers, but maintain layout
*/

.invisible {
  visibility: hidden;
}

/*
* Clearfix: contain floats
*
* For modern browsers
* 1. The space content is one way to avoid an Opera bug when the
*    `contenteditable` attribute is included anywhere else in the document.
*    Otherwise it causes space to appear at the top and bottom of elements
*    that receive the `clearfix` class.
* 2. The use of `table` rather than `block` is only necessary if using
*    `:before` to contain the top-margins of child elements.
*/

.clearfix:before,
.clearfix:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}

.clearfix:after {
  clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 768px) {
  /* Tablet styles here */

  .content-wrapper {
    width: 640px;
    margin: 100px 0;
  }

/* Header */

header {
  justify-content: space-around;
  padding: 33px 0;
}

header .content-wrapper {
  width: 80%;
  justify-content: space-between;
}

header figure {
  width: 30%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

header nav {
  width: 30%;
}

header nav ul {
  justify-content: space-between;
}

.header-divider {
  display: none;
}


/* Aside */

aside .content-wrapper {
  margin: 50px 0;
  display: flex;
  justify-content: space-between;
  flex-flow: row wrap;
}

aside .content-wrapper .form-description,
aside .content-wrapper .form {
  width: 40%;
  margin: 0;
}

/* Features */

.features article {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
  flex-basis: 50%;
}

.features .features-item-description {
  width: 50%;
}

/* Reviews */

.reviews article {
  display: flex;
  justify-content: space-between;
}

.reviews article div {
  width: 49%;
}

/* FAQ Page */

.faq .content-wrapper {
  justify-content: space-between;
}

.faq-content {
  flex-basis: 45%;
}

.faq h2 {
  width: 100%;
}

/* About Page */

.mission-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 20px;
}

.mission-content p {
  width: 45%;
}

.map figure {
  padding-bottom: 45%;
}

.contact-section .content-wrapper h2 {
  width: 80%;
}

.contact-content {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

/* Footer */

footer .content-wrapper {
  width: 65%;
  margin: 100px 0;
}

.footer-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer .contact {
  margin-bottom: 2em;
}

footer .social {
  width: 45%;
}

footer .social-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0;

}

footer .social-icons i {
  justify-content: space-between;
}

footer .copyright {
  width: 100%;
}
}
/* ... */

